fixes fixedLayout bugs

--- a/app/stylesheets/main_page/community_resources_navigation.css.sass
+++ b/app/stylesheets/main_page/community_resources_navigation.css.sass
@@ -2,6 +2,7 @@
 #community-resources
   .navigation
     height: auto
+    width: 490px
 
     a.tab-button
       position: relative
